Moving types and helper functions to a new typescript sbtc library (#28)
* Moving types and helper functions to a new typescript sbtc library

* Added some unit tests for building and parsing deposit/withdrawal payloads

* Published and installed sbtc-bridge-lib to npm repo
